src/objects/MetadataSObject__c.object
<CustomObject>
    <fields>
        <fullName>AssetSummary__c</fullName>
        <description>System generated.</description>
        <formula>/* TODO this is ugly */
IF(
    IsManaged__c,
    &apos;Managed &apos;,
    &apos;&apos;
)
+
IF(
    IsChangeEvent__c, &apos;Change Event&apos;,
    IF(IsPlatformEvent__c, &apos;Platform Event&apos;,  
    IF(IsChatterFeedObject__c, &apos;Chatter Feed&apos;,
    IF(IsHistoryObject__c, &apos;Field History Tracking&apos;,
    IF(IsShareObject__c, &apos;Sharing Rules&apos;,
    IF(IsCustom__c, &apos;Custom Object&apos;,
    &apos;Standard Object&apos;
)))))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System generated.</inlineHelpText>
        <label>Asset Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessDefinition__c</fullName>
        <label>Business Definition</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DesignNotes__c</fullName>
        <label>Design Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <description>System generated</description>
        <externalId>true</externalId>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Developer Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InScopeSummary__c</fullName>
        <formula>IF(
    IsInScope__c == false,
    &apos;Object Out of Scope&apos;,
    &apos;Record Types: &apos; + TEXT(TotalInScopeRecordTypes__c) + &apos; out of &apos; + TEXT(TotalRecordTypes__c) + &apos; in scope&apos;
        + &apos; (&apos; + TEXT(TotalOpenRecordTypes__c) + &apos; open)&apos;
        + BR()
        + &apos;Fields: &apos; + TEXT(TotalInScopeFields__c) + &apos; out of &apos; + TEXT(TotalFields__c) + &apos; in scope&apos;
        + &apos; (&apos; + TEXT(TotalOpenFields__c) + &apos; open)&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Scope Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsChangeEvent__c</fullName>
        <description>System generated.</description>
        <formula>RIGHT(DeveloperName__c, 11) == &apos;ChangeEvent&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System generated.</inlineHelpText>
        <label>Is Change Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsChatterFeedObject__c</fullName>
        <description>System generated.</description>
        <formula>RIGHT(DeveloperName__c, 4) == &apos;Feed&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System generated.</inlineHelpText>
        <label>Is Chatter Feed Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <description>System generated.</description>
        <formula>OR(
    TEXT(Status__c) == &apos;Not Used&apos;,
    TEXT(Status__c) == &apos;Closed&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System generated.</inlineHelpText>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCustomMetadata__c</fullName>
        <description>System generated</description>
        <formula>RIGHT(DeveloperName__c, 5) == &apos;__mdt&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Is Custom Metadata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCustomSetting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Is Custom Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCustom__c</fullName>
        <defaultValue>true</defaultValue>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHistoryObject__c</fullName>
        <description>System generated.</description>
        <formula>RIGHT(DeveloperName__c, 7) == &apos;History&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System generated.</inlineHelpText>
        <label>Is History Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInScope__c</fullName>
        <formula>OR(
    IsClosed__c = false,
    TEXT(Status__c) = &apos;Done&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is In Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsManaged__c</fullName>
        <description>System generated.</description>
        <formula>TEXT(Namespace__c) != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System generated.</inlineHelpText>
        <label>Is Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPlatformEvent__c</fullName>
        <description>System generated</description>
        <formula>RIGHT(DeveloperName__c, 3) == &apos;__e&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Is Platform Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPlatformFeatureObject__c</fullName>
        <description>System generated</description>
        <formula>OR(
    IsChangeEvent__c,    
    IsChatterFeedObject__c,
    IsHistoryObject__c,
    IsShareObject__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Is Platform Feature Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsShareObject__c</fullName>
        <description>System generated.</description>
        <formula>RIGHT(DeveloperName__c, 5) == &apos;Share&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System generated.</inlineHelpText>
        <label>Is Share Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LabelLanguage__c</fullName>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Label Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                    <default>true</default>
                    <label>en_US</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LabelPlural__c</fullName>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Label Plural</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>System generated.</description>
        <inlineHelpText>System generated.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastMetadataChangeDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Last Metadata Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Namespace</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryMetadataSObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System generated.</description>
        <inlineHelpText>System generated.</inlineHelpText>
        <label>Primary SObject</label>
        <referenceTo>MetadataSObject__c</referenceTo>
        <relationshipLabel>Platform Feature SObjects</relationshipLabel>
        <relationshipName>PlatformFeatureSObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MetadataStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemHashCode__c</fullName>
        <description>System generated.</description>
        <inlineHelpText>System generated.</inlineHelpText>
        <label>System Hash Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalFields__c</fullName>
        <description>System generated</description>
        <inlineHelpText>System generated</inlineHelpText>
        <label>Total Fields</label>
        <summaryForeignKey>MetadataField__c.MetadataSObject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalInScopeFields__c</fullName>
        <label>Total In Scope Fields</label>
        <summaryFilterItems>
            <field>MetadataField__c.IsInScope__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>MetadataField__c.MetadataSObject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalInScopeRecordTypes__c</fullName>
        <label>Total In Scope Record Types</label>
        <summaryFilterItems>
            <field>MetadataRecordType__c.IsInScope__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>MetadataRecordType__c.MetadataSObject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalOpenFields__c</fullName>
        <label>Total Open Fields</label>
        <summaryFilterItems>
            <field>MetadataField__c.IsClosed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>MetadataField__c.MetadataSObject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalOpenRecordTypes__c</fullName>
        <label>Total Open Record Types</label>
        <summaryFilterItems>
            <field>MetadataRecordType__c.IsClosed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>MetadataRecordType__c.MetadataSObject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalRecordTypes__c</fullName>
        <description>System generated.</description>
        <inlineHelpText>System generated.</inlineHelpText>
        <label>Total Record Types</label>
        <summaryForeignKey>MetadataRecordType__c.MetadataSObject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UploadId__c</fullName>
        <description>A unique, external ID - you can use this to store any value you want for upserting records.</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique, external ID - you can use this to store any value you want for upserting records.</inlineHelpText>
        <label>Upload ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Uuid__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>SObject</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>TotalRecordTypes__c</columns>
        <columns>TotalFields__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>Status__c</columns>
        <columns>TotalRecordTypes__c</columns>
        <columns>TotalFields__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MetadataSObject__c.Asset</value>
        </filters>
        <label>All Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllBlueprints</fullName>
        <columns>NAME</columns>
        <columns>DesignNotes__c</columns>
        <columns>Status__c</columns>
        <columns>TotalRecordTypes__c</columns>
        <columns>TotalFields__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MetadataSObject__c.Blueprint</value>
        </filters>
        <label>All Blueprints</label>
    </listViews>
    <listViews>
        <fullName>AllClosed</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>TotalRecordTypes__c</columns>
        <columns>TotalFields__c</columns>
        <columns>LastMetadataChangeDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllCustomObjects</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>TotalRecordTypes__c</columns>
        <columns>TotalFields__c</columns>
        <columns>LastMetadataChangeDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsCustom__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MetadataSObject__c.Asset</value>
        </filters>
        <label>All Custom Objects</label>
    </listViews>
    <listViews>
        <fullName>AllInScope</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>TotalInScopeRecordTypes__c</columns>
        <columns>TotalInScopeFields__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsInScope__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All In Scope</label>
    </listViews>
    <listViews>
        <fullName>AllOpen</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>TotalRecordTypes__c</columns>
        <columns>TotalFields__c</columns>
        <columns>LastMetadataChangeDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open</label>
    </listViews>
    <listViews>
        <fullName>AllPlatformFeatureAssets</fullName>
        <columns>NAME</columns>
        <columns>PrimaryMetadataSObject__c</columns>
        <columns>AssetSummary__c</columns>
        <columns>Label__c</columns>
        <columns>Status__c</columns>
        <columns>TotalFields__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MetadataSObject__c.PlatformFeatureAsset</value>
        </filters>
        <label>All Platform Feature Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllStandardObjects</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>TotalRecordTypes__c</columns>
        <columns>TotalFields__c</columns>
        <columns>LastMetadataChangeDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsCustom__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MetadataSObject__c.Asset</value>
        </filters>
        <label>All Standard Objects</label>
    </listViews>
    <listViews>
        <fullName>UnusedObjects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>TotalRecordTypes__c</columns>
        <columns>TotalFields__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Used</value>
        </filters>
        <label>Unused Objects</label>
    </listViews>
    <nameField>
        <label>SObject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SObjects</pluralLabel>
    <recordTypes>
        <fullName>Asset</fullName>
        <active>true</active>
        <description>Design &amp; config have been started</description>
        <label>Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>Blueprint</fullName>
        <active>true</active>
        <description>I have an idea with some or all details</description>
        <label>Blueprint</label>
    </recordTypes>
    <recordTypes>
        <fullName>PlatformFeatureAsset</fullName>
        <active>true</active>
        <label>Platform Feature</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>